# spin-node

./: .gitignore  Makefile  README.md  fibonacci.elf
.cargo/: config.toml
example_contracts/: Cargo.toml
example_contracts/counter/: Cargo.toml
example_contracts/counter/src/: main.rs
example_contracts/demo_ccc/: Cargo.toml
example_contracts/demo_ccc/src/: main.rs
example_contracts/fibonacci/: Cargo.toml
example_contracts/fibonacci/src/: main.rs
example_contracts/playground/: Cargo.toml
example_contracts/playground/src/: main.rs
example_contracts/token/: Cargo.toml
example_contracts/token/src/: main.rs
simple_contract_state/: imageId.txt  seal.txt
spin_core/: Cargo.toml  flake.nix
spin_core/etc/evm_contracts/: erc20_bytecode  factory.abi  factory_bytecode  vault.abi
spin_core/meta_contracts/: Cargo.toml
spin_core/meta_contracts/evm/: Cargo.toml
spin_core/meta_contracts/evm/src/: main.rs  memory_backend.rs
spin_core/playgrounds/: Cargo.toml
spin_core/playgrounds/src/: lib.rs
spin_core/primitives/: Cargo.toml
spin_core/primitives/src/: lib.rs  syscalls.rs
spin_core/runtime/: Cargo.toml
spin_core/runtime/src/: context.rs  executor.rs  lib.rs  main.rs
spin_core/runtime/src/syscalls/: accounts_mapping.rs  cross_contract.rs  env.rs  mod.rs  storage.rs
spin_core/src/: main.rs
spin_core/state/: token.spin
spin_sdk/: Cargo.toml
spin_sdk/macros/: Cargo.toml
spin_sdk/macros/src/: lib.rs
spin_sdk/sdk/: Cargo.toml
spin_sdk/sdk/src/: env.rs  lib.rs
spin_sdk/src/: lib.rs
verifier/: .gitignore  hardhat.config.ts  package-lock.json  package.json
verifier/contracts/: Base.sol  BonsaiCheats.sol  BonsaiRelayQueueWrapper.sol  BonsaiTest.sol  RiscZeroGroth16Verifier.sol  Strings2.sol
verifier/contracts/forge/: StdAssertions.sol  Test.sol
verifier/contracts/groth16/: RiscZeroGroth16Verifier.sol
verifier/tests/: Verifier.ts
