[package]
name = "example_contract_builder"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { git = "ssh://git@github.com/risc0/risc0.git", rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628" }

[package.metadata.risc0]
methods = ["fibonacci", "counter", "token", "playground"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3