[package]
name = "example_contract_builder"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { git = "https://github.com/medvednick/risc0.git", rev = "34794fce4a4486db59700cf5e056efb8ef6098ba" }

[package.metadata.risc0]
methods = ["fibonacci", "counter", "token", "playground"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3