[workspace]
members = [
    "primitives",
    "runtime",
    "meta_contracts",
    "playgrounds",
]

[workspace.dependencies.risc0-build]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"

[workspace.dependencies.risc0-build-kernel]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"

[workspace.dependencies.risc0-circuit-rv32im]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"
default-features = false

[workspace.dependencies.risc0-core]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"
default-features = false

[workspace.dependencies.risc0-zkp]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"
default-features = false

[workspace.dependencies.risc0-zkvm]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"
default-features = false

[workspace.dependencies.risc0-zkvm-methods]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"

[workspace.dependencies.risc0-zkvm-platform]
git = "https://github.com/risc0/risc0.git"
rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628"
