[package]
name = "spin_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
risc0-zkvm = { version = "0.16.1", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.16.1"
serde = { version = "1.0.171", features = ["derive"] }
