[package]
name = "token_contract"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "0658eaa6aa9d60e8ac637fa4e15f22eabeb97628", default-features = false, features = [ "std" ] }
spin_sdk = { path = "../../spin_sdk/sdk" }
spin_sdk_macros = { path = "../../spin_sdk/macros" }
borsh = "0.10.3"
