[package]
name = "meta_contracts"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "0.16.0" }

[package.metadata.risc0]
methods = ["evm"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3