[package]
name = "playgrounds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "erc20"

[[bin]]
name = "example_token"

[dependencies]
spin_runtime = { path = "../runtime" }
spin_primitives = { path = "../primitives" }
risc0-zkvm = { workspace = true, features = ["prove"] }
risc0-zkp = { workspace = true }
risc0-zkvm-platform = { workspace = true }
# risc0-recursion = { path = "../../../risczero-wip/risc0/recursion", default-features = false, features = ["prove"] }
# risc0-circuit-recursion = { path = "../../../risczero-wip/zirgen/circuit/recursion", default-features = false }

borsh = "0.10.3"
serde_json = "1.0.103"
tracing = "0.1.36"
tracing-core = "0.1.29"
tracing-log = "0.1.3"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
anyhow = "1.0.72"

eth-primitive-types = { package = "primitive-types", version = "0.12.1" }
hex = "0.4.3"
ethabi = "18.0.0"