[package]
name = "spin_primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
risc0-zkvm = { version = "0.16.1", default-features = false, features = ["std"] }
risc0-zkvm-platform = { version = "0.16.1" }

serde = { version = "1.0.171", features = ["derive"] }
borsh = "0.10.3"

tracing = "0.1.36"
tracing-core = "0.1.29"
tracing-log = "0.1.3"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
