[package]
name = "spin_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin_primitives = { path = "../primitives" }
meta_contracts = { path = "../meta_contracts" }

anyhow = "1.0.72"
risc0-zkvm = { workspace = true, features = ["prove"] }
risc0-zkp = { workspace = true }
risc0-zkvm-platform = { workspace = true }

serde = { version = "1.0.171", features = ["derive"] }
borsh = "0.10.3"
tracing = "0.1.36"
eth-primitive-types = { package = "primitive-types", version = "0.12.1" }
hex = "0.4.3"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
