[package]
name = "evm_metacontract"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.16.1", default-features = false, features = [ "std" ] }
spin_sdk = { path = "../../../spin_sdk/sdk" }
spin_sdk_macros = { path = "../../../spin_sdk/macros" }
borsh = { git = "ssh://github.com/near/borsh-rs", branch = "master", features = ["derive"] }
evm = { version = "0.39.1", features = ["with-serde"] }
primitive-types = "0.12.1"
bincode = "1.3.3"
