[package]
name = "evm_metacontract"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { git = "https://github.com/medvedNick/risc0.git", rev = "34794fce4a4486db59700cf5e056efb8ef6098ba", default-features = false, features = [ "std" ] }
spin_sdk = { path = "../../../spin_sdk/sdk" }
spin_sdk_macros = { path = "../../../spin_sdk/macros" }
borsh = "0.10.3"
evm = { version = "0.39.1", features = ["with-serde"] }
primitive-types = "0.12.1"
bincode = "1.3.3"
